--- a/android-frontend/app/src/main/res/layout/app_base_layout.xml
+++ b/android-frontend/app/src/main/res/layout/app_base_layout.xml
@@ -18,7 +18,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        />
-        <!--app:menu="@menu/menu_test"-->
 
+        app:menu="@menu/navigation_drawer"
+        />
 </android.support.v4.widget.DrawerLayout>
