--- a/android-frontend/app/src/main/res/layout/home_item_layout.xml
+++ b/android-frontend/app/src/main/res/layout/home_item_layout.xml
@@ -5,10 +5,10 @@
     android:layout_height="60dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="sadasdas" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv"
+        />
 
 </LinearLayout>
