--- a/android-frontend/app/src/main/res/layout/activity_start.xml
+++ b/android-frontend/app/src/main/res/layout/activity_start.xml
@@ -9,19 +9,25 @@
     <Button
         android:id="@+id/bSignUp"
         android:text="@string/sign_up"
+        android:textSize="18sp"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        />
+        android:background="@android:color/holo_blue_light"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/bLogin"
         android:text="@string/login"
+        android:textSize="18sp"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_blue_light"
         />
 
 
