--- a/android-frontend/app/src/main/res/layout/fragment_store.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_store.xml
@@ -1,13 +1,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="xpmxp1.tenderstar.StoreFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/store_list"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Store Fragment" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
