--- a/android-frontend/app/src/main/res/layout/fragment_store_details.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_store_details.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView_name"
+                android:id="@+id/textView_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -32,7 +32,7 @@
                 android:id="@+id/textView_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_name"
+                android:layout_below="@+id/textView_search"
                 android:layout_marginTop="10dp"
                 android:text="address" />
 
