--- a/android-frontend/app/src/main/res/layout/fragment_home.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_home.xml
@@ -30,15 +30,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="Search" />
+                    android:hint="@string/search"
+                    android:inputType="text" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/button_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
                     android:layout_below="@+id/editText_search"
-                    android:text="Button" />
+                    android:text="@string/search" />
+
+                <Button
+                    android:id="@+id/button_reset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/editText_search"
+                    android:text="@string/reset" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
