--- a/android-frontend/app/src/main/res/layout/fragment_favorites.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_favorites.xml
@@ -5,9 +5,9 @@
     tools:context="xpmxp1.tenderstar.FavoritesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Favorites Fragment" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorite_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
