--- a/android-frontend/app/src/main/res/layout/store_card.xml
+++ b/android-frontend/app/src/main/res/layout/store_card.xml
@@ -28,5 +28,14 @@
             android:layout_marginTop="10dp"
             android:text="address" />
 
+        <Button
+            android:id="@+id/favoriteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:text="Favorite" />
+
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
