--- a/android-frontend/app/src/main/res/layout/fragment_favorites.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_favorites.xml
@@ -9,5 +9,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/favorite_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+    </android.support.v7.widget.RecyclerView>
+
 </FrameLayout>
