--- a/android-frontend/app/src/main/res/layout/fragment_store_details.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_store_details.xml
@@ -48,7 +48,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView_hours"
+                android:autoLink="web"
                 android:text="link to web shop" />
+
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
