--- a/android-frontend/app/src/main/res/layout/store_card.xml
+++ b/android-frontend/app/src/main/res/layout/store_card.xml
@@ -36,6 +36,14 @@
             android:layout_alignParentTop="true"
             android:text="Favorite" />
 
+        <Button
+            android:id="@+id/removeFavoriteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:text="Remove" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
