--- a/android-frontend/app/src/main/res/layout/product_card.xml
+++ b/android-frontend/app/src/main/res/layout/product_card.xml
@@ -69,8 +69,8 @@
                 android:id="@+id/button_remove_shopping_cart"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:src="@drawable/ic_add_shopping_cart_black_24dp"
+                android:layout_alignParentRight="true"
                 android:layout_marginLeft="180dp"
-                android:layout_alignParentRight="true" />
+                android:src="@android:drawable/ic_menu_close_clear_cancel" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
