--- a/android-frontend/app/src/main/res/layout/store_card.xml
+++ b/android-frontend/app/src/main/res/layout/store_card.xml
@@ -28,21 +28,21 @@
             android:layout_marginTop="10dp"
             android:text="address" />
 
-        <Button
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/favoriteBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:text="Favorite" />
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="180dp"
+            android:src="@android:drawable/btn_star" />
 
-        <Button
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/removeFavoriteBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:text="Remove" />
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="180dp"
+            android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
     </RelativeLayout>
 
