--- a/android-frontend/app/src/main/res/menu/navigation_drawer.xml
+++ b/android-frontend/app/src/main/res/menu/navigation_drawer.xml
@@ -16,6 +16,9 @@
         <item
             android:id="@+id/nav_shopping_cart"
             android:title="Shopping Cart" />
+        <item
+            android:id="@+id/temp_test"
+            android:title="Maps" />
     </group>
 
 </menu>
