--- a/android-frontend/app/src/main/res/layout/fragment_store_details.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_store_details.xml
@@ -50,6 +50,14 @@
                 android:layout_below="@+id/textView_hours"
                 android:text="link to web shop" />
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/button_navigate"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_add_shopping_cart_black_24dp"
+                android:layout_marginLeft="180dp"
+                android:layout_alignParentRight="true" />
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
