--- a/android-frontend/app/src/main/res/layout/product_card.xml
+++ b/android-frontend/app/src/main/res/layout/product_card.xml
@@ -26,6 +26,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@id/imageView"
                 android:layout_marginLeft="6dp"
+                android:layout_marginRight="50dp"
                 android:textStyle="bold"
                 />
 
@@ -37,6 +38,7 @@
                 android:layout_toRightOf="@id/imageView"
                 android:layout_marginTop="6dp"
                 android:layout_marginLeft="6dp"
+                android:layout_marginRight="50dp"
                 android:layout_alignParentTop="@id/textView_name" />
 
             <TextView
