[DS, TL] fixed orientation bug and calculated routes to store

--- a/android-frontend/app/src/main/res/menu/navigation_drawer.xml
+++ b/android-frontend/app/src/main/res/menu/navigation_drawer.xml
@@ -18,7 +18,7 @@
             android:title="Shopping Cart" />
         <item
             android:id="@+id/temp_test"
-            android:title="Maps" />
+            android:title="Map" />
     </group>
 
 </menu>
