--- a/android-frontend/app/src/main/res/layout/fragment_store_details.xml
+++ b/android-frontend/app/src/main/res/layout/fragment_store_details.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="2dp"
@@ -52,11 +52,12 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/button_navigate"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/ic_add_shopping_cart_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:layout_marginLeft="180dp"
-                android:layout_alignParentRight="true" />
+                android:src="@drawable/ic_baseline_place_24px"
+                card_view:backgroundTint="@color/colorAccent" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
