--- a/android-frontend/app/src/main/res/menu/navigation_drawer.xml
+++ b/android-frontend/app/src/main/res/menu/navigation_drawer.xml
@@ -17,7 +17,7 @@
             android:id="@+id/nav_shopping_cart"
             android:title="Shopping Cart" />
         <item
-            android:id="@+id/temp_test"
+            android:id="@+id/nav_map"
             android:title="Map" />
     </group>
 
